X-editable-yii changelog
============================

Version 1.3.1  wip
----------------------------
[enh #57] added support for CFormModel (vitalets)
[enh #55] support of inline functions in column value (vitalets)


Version 1.3.0  Jun 29, 2013
----------------------------
[enh #43] support for non-scalar virtual attributes (pavshuk)
[enh] update x-editable js to 1.4.5 (vitalets)
[enh] added mongoDB support (vitalets)
[enh #48] scenario is taken dynamically from model and used in EditableSaver (vitalets)
[enh #46] add `liveTarget` option to support live update in CListView (vitalets)


Version 1.2.0  May 29, 2013
----------------------------
[enh #7] column sort icons for bootstrap (vitalets)
[bug #41] if all columns have `apply=false` grid becomes un-editable after update (horizons2)
[enh #39] support php < 5.3 (vitalets)
[enh #37] added Editable::source method (vitalets)
[enh #38] CSRF support out of box (horizons2)
[enh #35] support of dates as timestamp (andersonamuller)
[enh] support of virtual_fields in EditableColumn (vitalets)


Version 1.1.0  May 18, 2013
----------------------------
[enh #33] allow `apply` as a PHP expression in EditableColumn (oinegue)
[enh #22] allow CArrayDataProvider for EditableColumn (ciarand)
[enh] added bootstrap datetime support (vitalets)
[enh #5] source as array is always data, not Yii route (vitalets)
[enh #9] support for namespaced models (vitalets)
[enh] updated to x-editable 1.4.4: added combodate and select2 (vitalets)
[enh #16] EditableDetailView defaults + french translation (mdeweerd) 
[bug] If apply = true, attribute can be unsafe (vitalets)
[enh] Added composer support (vitalets)
[chg] EditableDetailView emptytext no more taken from nullDisplay option (vitalets)
[bug] Disable loading Yii's css for EditableDetailView in bootstrap mode (vitalets)
[enh #6] Added support of composite primary keys (vitalets)
[enh] Added Italian messages (vitalets)


Version 1.0.0  Dec 26, 2012
----------------------------